# SelfLib

./: .gitignore  CMakeLists.txt  Package.swift  README.md
Sources/SelfLib-Cxx/: CMakeLists.txt
Sources/SelfLib-Cxx/Headers/SelfLib/: Build.hpp  Compare.hpp  Degrees.hpp  Number+Clamp.hpp  Number+Compare.hpp  Number+Lerp.hpp  Number+Max.hpp  Number+Min.hpp  Number.hpp  Percent.hpp  Point.hpp  Radians.hpp  Range.hpp  Result.hpp  SelfLib.hpp
Sources/SelfLib-Cxx/Headers/SelfLib/Flow/: Node.hpp  Pipeline.hpp
Sources/SelfLib-Cxx/Headers/SelfLib/Test/: Case.hpp  Runner.hpp
Sources/SelfLib-Cxx/Sources/: Build.cpp
Sources/SelfLib-Swift/: SelfLib.swift
Sources/SelfTest-Cxx/: CMakeLists.txt
Sources/SelfTest-Cxx/Headers/SelfTest/: Number.hpp  SelfTest.hpp
Sources/SelfTest-Cxx/Sources/: SelfTest.cpp
Tests/SelfTest-Swift/: SelfTest.swift
